--- a/tac-plots.html
+++ b/tac-plots.html
@@ -234,12 +234,12 @@ var is_equal_simple = function(a, b){
         ],
         created: function(){
             var worker_builder = Polymer.DomModule.import('tac-plots','#worker');
-            this.worker = worker_builder.create_for(this);
-            this.key_to_canvas = {};
-            this.key_to_rendered_options = {};
-            this.key_is_on_worker = {};
-            this.key_generation = 0;
-            this.times_is_on_worker = false;
+            this._worker = worker_builder.create_for(this);
+            this._key_to_canvas = new Map();
+            this._key_to_rendered_options = new Map();
+            this._key_is_on_worker = new Map();
+            this._key_generation = 0;
+            this._times_is_on_worker = false;
         },
         _update_keys: function(keys_to_remove, keys_to_add, generation_remove, generation_add){
             var am = Utils.typed_array_manager;
@@ -248,24 +248,25 @@ var is_equal_simple = function(a, b){
             var added_arrays = {};
             if (this.show === 'y'){
                 // get clones of new arrays to send to worker
-                for(let ii=0; ii<keys_to_add.length; ii++){
-                    let key = keys_to_add[ii];
-                    let akey = this.groups_collection.getItem(key).inds;
-                    added_arrays[key] = am.get_array_clone(akey);
-                    this.key_is_on_worker[key] = true;
+                for(let key of keys_to_add){
+                    let box = this.groups_collection.getItem(key);
+                    if(box){
+                        added_arrays[key] = am.get_array_clone(box.akey);
+                        this._key_is_on_worker.set(key, true);                        
+                    }
                 }
             } else {
                 // if we are not showing the plot, we don't actually get 
                 // any arrays, but we need to remmeber that we never sent them
                 // to the worker.
-                for(let ii=0; ii<keys_to_add.length; ii++){
-                    this.key_is_on_worker[key] = false;
+                for(let key of keys_to_add){
+                    this._key_is_on_worker.set(key, false);
                 }
                 keys_to_add = [];
             }
 
             // inform worker of the new/deleted arrays
-            this.worker.exec_b('update_keys', {
+            this._worker.exec_b('update_keys', {
                 add: keys_to_add,
                 remove: keys_to_remove,
                 generation_remove: generation_remove,
@@ -274,15 +275,14 @@ var is_equal_simple = function(a, b){
 
             // free canvases, it's our responsiblity to do this, whereas 
             // freeing the inds arrays was the responsibility of cut-obj.
-            for(let ii=0; ii<keys_to_remove.length; ii++){
-                let key = keys_to_remove[ii];
-                let canvas = this.key_to_canvas[key];
+            for(let key of keys_to_remove){
+                let canvas = this._key_to_canvas.get(key);
                 if(canvas){
                     cm.free_canvas(canvas);
                 }
-                delete this.key_to_canvas[key];
-                delete this.key_to_rendered_options[key];
-                delete this.key_is_on_worker[key]; // we can also forget this
+                this._key_to_canvas.delete(key);
+                this._key_to_rendered_options.delete(key);
+                this._key_is_on_worker.delete(key); // we can also forget this
             }
         },
         _groups_set: function(new_val, old_val){
@@ -291,15 +291,15 @@ var is_equal_simple = function(a, b){
             this.groups_collection = Array.isArray(new_val) && Polymer.Collection.get(new_val);
             var added = this.groups_collection ? 
                             this.groups_collection.getKeys() : []; 
-            this._update_keys(removed, added, this.key_generation, ++this.key_generation); // added keys are for a new generation
+            this._update_keys(removed, added, this._key_generation, ++this._key_generation); // added keys are for a new generation
         },
         _groups_spliced: function(splices){
             if(!splices) return;
             var dedupes = Utils.dedupe(splices.keySplices);
-            this._update_keys(dedupes.removed, dedupes.added, this.key_generation, this.key_generation);
+            this._update_keys(dedupes.removed, dedupes.added, this._key_generation, this._key_generation);
         },
         _options_modified: function(){
-            this.worker.exec('set_options', {
+            this._worker.exec('set_options', {
                 max_delta_t: this.max_delta_t
             });
         },
@@ -307,26 +307,27 @@ var is_equal_simple = function(a, b){
             if(this.show === 'y'){
                 if(this.spike_times){
                     var arr = Utils.typed_array_manager.get_array_clone(this.spike_times.data);
-                    this.worker.exec_b('set_spike_times', this.spike_times.timebase, {data: arr});
+                    this._worker.exec_b('set_spike_times', this.spike_times.timebase, {data: arr});
                 } else {
-                    if(!this.worker) return;
-                    this.worker.exec('set_spike_times', {});
+                    if(!this._worker) return;
+                    this._worker.exec('set_spike_times', {});
                 }
-                this.times_is_on_worker = true;
+                this._times_is_on_worker = true;
             } else {
-                if(!this.spike_times && this.times_is_on_worker){
-                    this.worker.exec('set_spike_times', {});
+                if(!this.spike_times && this._times_is_on_worker){
+                    this._worker.exec('set_spike_times', {});
                 }
-                this.times_is_on_worker = false;
+                this._times_is_on_worker = false;
             }
         },
         _show_changed: function(){
             if(this.show === 'y'){
-                var added = Object.keys(this.key_is_on_worker).filter(function(k){
-                    return !this.key_is_on_worker[k];
-                }, this);
-                this._update_keys([], added, this.key_generation, this.key_generation);
-                if(!this.times_is_on_worker){
+                var added = [];
+                for(let [k,v] in this._key_is_on_worker)if(!v){
+                    added.push(k);
+                }
+                this._update_keys([], added, this._key_generation, this._key_generation);
+                if(!this._times_is_on_worker){
                     this._times_modified();
                 }
             } else if (this.show === 'n'){
@@ -334,12 +335,12 @@ var is_equal_simple = function(a, b){
             } else {
                 throw "invalid value for show";
             }
-            if(this.worker){
-                this.worker.exec('set_show', this.show); // worker needs to know even if it's all 'n', because then it won't bother doing anything.
+            if(this._worker){
+                this._worker.exec('set_show', this.show); // worker needs to know even if it's all 'n', because then it won't bother doing anything.
             }
         },
         plot_hist: function(data, arrays) {
-            if(data.generation !== this.key_generation)
+            if(data.generation !== this._key_generation)
                 return; // pft! get with the times, dude.
             var group = this.groups_collection.getItem(data.key);
             // TODO: actually make the histogram, store it and settings locally and set on group
