--- a/webgl-debug.html
+++ b/webgl-debug.html
@@ -1,4 +1,6 @@
-http://www.khronos.org/webgl/wiki/Debugging
+<!-- http://www.khronos.org/webgl/wiki/Debugging -->
+
+<script>
 
 //Some suggested additions:
 function validateNoneOfTheArgsAreUndefined(functionName, args) {
@@ -898,3 +900,4 @@ return {
 
 }();
 
+</script>
