--- a/tile-element.html
+++ b/tile-element.html
@@ -39,128 +39,127 @@ is in null state. When another tile is moving, it cannot be active instead it is
 <link rel="import" href="palettes.html">
 
 <dom-module id="tile-element">
+<style>
+:host {
+display: inline-block;
+position: relative;
+transform: rotateY(0);
+-webkit-transform: rotateY(0);
+min-width: 98px;
+min-height: 128px;
+left: 0px;
+top: 0px;
+overflow: hidden;
+border: 1px solid #CCC;
+line-height: 0px;
+}
+.tile-over{
+/*display: none;*/
+position: absolute;
+top: 0px;
+left: 0px;
+right: 0px;
+bottom: 0px;
+}
+.tile-caption{
+padding-top: 2px;
+line-height: 12px;
+text-align: center;
+background-color:rgba(255,255,255,0.85);
+box-shadow: -3px 0px 6px #ddc;
+}
+:host-context(.shake){
+-webkit-animation-name:shake;-moz-animation-name:shake;-o-animation-name:shake;animation-name:shake;
+-webkit-animation-duration: 1s;
+    -moz-animation-duration: 1s;
+    -ms-animation-duration: 1s;
+    -o-animation-duration: 1s;
+    animation-duration: 1s;
+}
 
+.tile-sticker{
+line-height: 12px;
+width: 20px;
+height: 17px;
+border: 1px solid #000;
+text-align: center;
+font-size: 0.8em;
+padding-top: 3px;
+position: absolute;
+right: 2px;
+top: 2px;
+z-index: 10;
+}
+.tile-side{
+position: absolute;
+right: 0px;
+top: 0px;
+bottom: 0px;
+width: 60px;
+}
+.blind{
+position: absolute;
+left: 0px;
+right: 0px;
+top: 0px;
+bottom: 0px;
+z-index: 100;
+background: rgba(0,0,0,0.5);
+display: none;
+}
+canvas{
+image-rendering: pixelated;
+}
+.dir-rm{
+height:78px;
+}
+.speed-rm{
+}
+.tc{
+height:50px;
+}
+.caption-inner{
+border-bottom: 1px solid #000;
+padding-bottom: 1px;
+padding-top: 1px;
+}
+.caption-inner:last-of-type{
+border-bottom: 0px;    
+}
+.caption-inner-label{
+font-weight: bold;
+font-size: 0.8em;
+}
+/*
+.grabbed_info .tile-buttons{
+display: none;
+}
+
+*/
+.canvas_part_1{
+display: inline-block;
+}
+.canvas_part_2{
+display: inline-block;
+flex-direction: column;
+}
+.tile-side{
+display: flex;
+flex-direction: column; 
+}
+.flex{
+flex:2;
+}
+@-webkit-keyframes fadeout{
+0%     { opacity: 1;  }
+33%   { opacity: 1;   }
+50%   { opacity: 0;   }
+83%   { opacity: 0;   }
+100%   { opacity: 1;   }
+}
+</style>
 <template>
-    <style>
-    :host {
-    display: inline-block;
-    position: relative;
-    transform: rotateY(0);
-    -webkit-transform: rotateY(0);
-    min-width: 98px;
-    min-height: 128px;
-    left: 0px;
-    top: 0px;
-    overflow: hidden;
-    border: 1px solid #CCC;
-    line-height: 0px;
-    }
-    .tile-over{
-    display: none;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    }
-    .tile-caption{
-    padding-top: 2px;
-    line-height: 12px;
-    text-align: center;
-    background-color:rgba(255,255,255,0.85);
-    box-shadow: -3px 0px 6px #ddc;
-    }
-    :host-context(.shake){
-    -webkit-animation-name:shake;-moz-animation-name:shake;-o-animation-name:shake;animation-name:shake;
-    -webkit-animation-duration: 1s;
-        -moz-animation-duration: 1s;
-        -ms-animation-duration: 1s;
-        -o-animation-duration: 1s;
-        animation-duration: 1s;
-    }
-
-    .tile-sticker{
-    line-height: 12px;
-    width: 20px;
-    height: 17px;
-    border: 1px solid #000;
-    text-align: center;
-    font-size: 0.8em;
-    padding-top: 3px;
-    position: absolute;
-    right: 2px;
-    top: 2px;
-    z-index: 10;
-    }
-    .tile-side{
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
-    width: 60px;
-    }
-    .blind{
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
-    z-index: 100;
-    background: rgba(0,0,0,0.5);
-    display: none;
-    }
-    canvas{
-    image-rendering: pixelated;
-    }
-    .dir-rm{
-    height:78px;
-    }
-    .speed-rm{
-    }
-    .tc{
-    height:50px;
-    }
-    .caption-inner{
-    border-top: 1px solid #000;
-    padding-top: 2px;
-    }
-    .caption-inner:nth-of-type(1){
-    border-top: 0px;    
-    }
-    .caption-inner-label{
-    font-weight: bold;
-    font-size: 0.8em;
-    }
-    /*
-    .grabbed_info .tile-buttons{
-    display: none;
-    }
-
-    */
-    .canvas_part_1{
-    display: inline-block;
-    }
-    .canvas_part_2{
-    display: inline-block;
-    flex-direction: column;
-    }
-    .tile-side{
-    display: flex;
-    flex-direction: column; 
-    }
-    .flex{
-    flex:2;
-    }
-    @-webkit-keyframes fadeout{
-    0%     { opacity: 1;  }
-    33%   { opacity: 1;   }
-    50%   { opacity: 0;   }
-    83%   { opacity: 0;   }
-    100%   { opacity: 1;   }
-    }
-    </style>
     <div class="canvas_part_1">
-        <canvas width='0' height='0' style='width:0px;height:128px;'></canvas> 
         <managed-canvas canv_id="[[waves]]"></managed-canvas>
         <managed-canvas canv_id="[[spa_rm]]"></managed-canvas>
     </div>
@@ -176,7 +175,8 @@ is in null state. When another tile is moving, it cannot be active instead it is
         <div class='tile-side'>
             <div class="flex"></div>
             <div class='tile-caption'>
-                <div style$='display:[[_show(group_spa_max)]]' class="caption-inner">[[group_spa_max]]Hz
+                <div style$='[[_show(group_spa_max)]]' class="caption-inner">
+                    [[group_spa_max]]Hz
                     <div class="caption-inner-label">spa max</div>
                 </div>
                 <div class="caption-inner">[[group_n]]
@@ -254,47 +254,45 @@ is in null state. When another tile is moving, it cannot be active instead it is
             group_num: {
                 type: Number,
                 notify: true,
-                value: -1
-            },
-            group_color_1: {
-                type: String,
-                notify: true,
-                value: '#666'
-            },
-            group_color_2: {
-                type: String,
-                notify: true,
-                value: '#f00'
+                value: -1,
+                notify: true
             },
             group_n: {
-                type: String,
+                type: Number,
                 notify: true,
-                value: '???'
+                value: -1,
+                notify: true
             },
             dir_rm: {
                 type: String, //canvas-manger id
-                value: ""
+                value: "",
+                notify: true
             },
             spa_rm: {
                 type: String, //canvas-manger id
-                value: ""
+                value: "",
+                notify: true
             },
             speed_rm: {
                 type: String, //canvas-manger id
-                value: ""
+                value: "",
+                notify: true
             },
             waves: {
                 type: String, //canvas-manger id
-                value: ""
+                value: "",
+                notify: true
             },
             tac: {
                 type: String, //canvas-manger id
-                value: ""
+                value: "",
+                notify: true
             },
             group_spa_max: {
-                type: String,
+                type: Number,
                 notify: true,
-                value: null
+                value: -1,
+                notify: true
             },
             state: {
                 notify: true,
@@ -321,16 +319,17 @@ is in null state. When another tile is moving, it cannot be active instead it is
                 value: false,
                 notify: true
             },
-            borderWidth: {
+            border_width: {
                 type: Number,
                 value: 1,
-                computed: 'compute_border_width(moving)'
+                computed: 'compute_border_width(moving)',
+                notify: true
             }
         },
         observers: [
             '_update_state(active, moving, proximate, disabled)'
         ], _show: function(val){ // for use in binding as style$='display:_show(val)', truthy vals are shown, falsey are hidden
-            return val ? '' : 'none';
+            return val >= 0 ? '' : 'display:none;';
         }, updateCanvas: function(newCanv, canvasNum){
             return;
             var oldCanv = Polymer.dom(this.root).querySelectorAll('canvas')[canvasNum];
